[package]
name = "raster"
version = "0.3.0"
license = "MIT"
authors = ["kosinix <kosinix@users.noreply.github.com>"]
exclude = [
    "main.rs",
    "dev/*",
    "tests/*",
]
keywords = [
    "image", "image-processing"
]
readme = "README.md"
description = "Image processing lib for Rust"
documentation = "https://docs.rs/raster/"
homepage = "https://github.com/kosinix/raster"
repository = "https://github.com/kosinix/raster.git"
edition = "2018"

[dependencies]
gif = "0.10"
png = "0.14"

[dependencies.piston_image]
package = "image"
version = "0.21"
default-features = false
features = ["jpeg", "jpeg_rayon"]
